--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,1 +1,21 @@
+name: Publish Docker image
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/publish-packages:latest
+          labels: |
+            org.opencontainers.image.source=${{ github.repositoryUrl }}
 
