--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/skills-publish-packages:latest
+          tags: ghcr.io/55cihat61/skills-publish-packages:latest
           labels: |
             org.opencontainers.image.source=${{ github.repositoryUrl }}
